--- a/polo.html
+++ b/polo.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Playlist] 아무 생각하기 싫을 때 가만히 듣기 좋은 잔잔한 재즈 | Cozy Jazz | Relaxing Background Music</title>
+    <title>Polo</title>
+    
 </head>
 <body>
-    
+    <header>
+
+    </header>
 </body>
 </html>
