--- a/polo.html
+++ b/polo.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polo</title>
-    
+    <!-- https://www.ralphlauren.co.kr/?utm_source=google&utm_medium=paidsearch&utm_campaign=KR|KO|SEA|BKW|Ralph_Lauren|Exact&utm_term=%ED%8F%B4%EB%A1%9C&utm_content=Ralph_Lauren|BKW|Exact&gad_source=1&gad_campaignid=18042657569&gbraid=0AAAAACLYVQWkjtHOHiV14vAO09ZQzStwK&gclid=Cj0KCQjw18bEBhCBARIsAKuAFEYs6VoTorho3LEuTfxIRoMc6DBMujTTdTLxA_jxLrh4TvLesLCLNbMaAuRaEALw_wcB -->
 </head>
+
 <body>
     <header>
+        <div class="pc_header">
+            <ul class="pc_top_content">
+                회원 구매시, 모든 주문 무료 배송 <a href="#">더 알아보기</a>
+            
+            </ul>
 
+            <div class="logo">RALPH LAUREN</div>
+            <nav>
+                <a href="#">남성</a>
+                <a href="#">여성</a>
+                <a href="#">키즈 & 베이비</a>
+                <a href="#">홈</a>
+                <a href="#">기프트</a>
+                <a href="#">DISCOVER</a>
+                <a href="#">SALE</a>
+        </div>
     </header>
 </body>
+
 </html>
